--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "babel-jest": "23.4.2",
     "babel-preset-react-native": "5.0.2",
     "jest": "23.5.0",
-    "react-test-renderer": "16.4.1"
+    "react-test-renderer": "16.4.1",
+    "reactotron-react-native": "^2.1.0"
   },
   "jest": {
     "preset": "react-native"
